:new: node index mapping for ConstraintViolations